--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,9 @@ on:
   # Runs every 5 minutes.
   # Runs at 00:00 UTC every day.
   # Actions schedules run at most every 5 minutes.
-  # schedule:
+  schedule:
     # - cron: '*/5 * * * *'
-    # - cron: '55 */8 * * *'
+    - cron: '55 */8 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # 自定义环境变量，有风险危险调用，有什么私密变量请不要定义在这里
