--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,9 @@ on:
   # Runs every 5 minutes.
   # Runs at 00:00 UTC every day.
   # Actions schedules run at most every 5 minutes.
-  schedule:
+  # schedule:
     # - cron: '*/5 * * * *'
-    - cron: '55 */8 * * *'
+    # - cron: '55 */8 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # 自定义环境变量，有风险危险调用，有什么私密变量请不要定义在这里
@@ -19,23 +19,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    # 配置 QEMU 
-    - name: Set up QEMU
+    - # 配置 QEMU 
+      name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-    # 配置 buildx 用于多架构镜像的构建
-    - name: Set up Docker Buildx
+    - # 配置 buildx 用于多架构镜像的构建
+      name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v3
-    # 打印 builder 支持信息
-    - name: Inspect builder
+    - # 打印 builder 支持信息
+      name: Inspect builder
       run: |
         echo "Name:      ${{ steps.buildx.outputs.name }}"
         echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
         echo "Status:    ${{ steps.buildx.outputs.status }}"
         echo "Flags:     ${{ steps.buildx.outputs.flags }}"
         echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-    # 登录 docker 仓库
-    - name: Login to GitHub Container Registry
+    - # 登录 docker 仓库
+      name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
@@ -54,13 +54,14 @@ jobs:
     - # 构建 amd64 镜像
       name: build amd64
       run: |
-        docker build --no-cache --platform "linux/amd64" -f Dockerfile -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64 .
-
-    - # 推送 amd64 镜像到仓库
-      name: push amd64
-      run: |
-        docker push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64
-
+        #docker build --no-cache --platform "linux/amd64" -f Dockerfile -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64 .
+        docker buildx build --platform "linux/amd64" -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest --push -f Dockerfile .
+    
+    # - # 推送 amd64 镜像到仓库
+    #   name: push amd64
+    #   run: |
+    #     docker push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64
+        
     - # 开关脚本用于执行编译架构 arm64 构建镜像
       name: arch switch arm64
       run: |
@@ -70,18 +71,21 @@ jobs:
     - # 构建 arm64 镜像
       name: build arm64
       run: |
-        docker build --no-cache --platform "linux/arm64/v8" -f Dockerfile -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64 .
-
-    - # 推送 arm64 镜像到仓库
-      name: push arm64
-      run: |
-        docker push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64
+        # docker build --no-cache --platform "linux/arm64/v8" -f Dockerfile -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64 .
+        docker buildx build --platform "linux/arm64/v8" -t ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest --push -f Dockerfile .
+    
+    # - # 推送 arm64 镜像到仓库
+    #   name: push arm64
+    #   run: |
+    #     docker push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64
         
-    # 上传镜像到仓库
-    - name: push
-      run: |
-        docker manifest create ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64 ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64
-        docker manifest push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest
+    
+    # - # 上传镜像到仓库
+    #   name: push
+    #   run: |
+    #     docker manifest create ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:amd64 ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:arm64
+    #     docker manifest push ghcr.io/uilgnod-liamtoh/alpine-miniforge-jupyter:latest
+    
     # 打印镜像信息
     - name: Inspect image
       run: |
